--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,12 +16,12 @@
     --bs-btn-bg: var(--primary-color);
     --bs-btn-border-color: var(--primary-color);
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #0b5ed7;
-    --bs-btn-hover-border-color: #0a58ca;
+    --bs-btn-hover-bg: var(--primary-color);
+    --bs-btn-hover-border-color: var(--primary-color);
     --bs-btn-focus-shadow-rgb: 49,132,253;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #0a58ca;
-    --bs-btn-active-border-color: #0a53be;
+    --bs-btn-active-bg: var(--primary-color);
+    --bs-btn-active-border-color: var(--primary-color);
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: var(--primary-color);
@@ -66,6 +66,10 @@ header .nav-link{
     color: var(--secondary-color);
 }
 
+header .nav-link.active{
+    color: var(--primary-color);
+    font-weight: 600;
+}
 
 /* footer section */
 footer {
