--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -158,6 +158,15 @@ header .nav-link:hover{
     font-weight: 600;
 }
 
+/* page header  */
+.page-header{
+    padding: 106px 0 100px;
+    background-image: url('../images/how-it-work-bg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 /* footer section */
 footer {
     background-color: var(--secondary-color);
